# openai-responses-rs

./: Cargo.toml
openai_responses_derive/: Cargo.toml
openai_responses_derive/src/: lib.rs
src/: lib.rs  types.rs
src/types/: item.rs  request.rs  tools.rs
