[package]
name = "openai_responses_derive"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the openai_responses crate"
license = "MIT OR Apache-2.0"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
schemars = { version = "0.8", features = ["derive"] }
